chinese app rename

--- a/passwordwallet/zh-Hans.lproj/LaunchScreen.strings
+++ b/passwordwallet/zh-Hans.lproj/LaunchScreen.strings
@@ -6,4 +6,4 @@
 "kId-c2-rCX.text" = "欢迎使用";
 
 /* Class = "UILabel"; text = "Password Booklet"; ObjectID = "tgn-3f-NHA"; */
-"tgn-3f-NHA.text" = "密码助手";
+"tgn-3f-NHA.text" = "密码小助手";
