--- a/passwordwallet/zh-Hans.lproj/Main.strings
+++ b/passwordwallet/zh-Hans.lproj/Main.strings
@@ -3,7 +3,7 @@
 "1Jz-hb-PgZ.title" = "退出";
 
 /* Class = "UINavigationItem"; title = "Password Booklet"; ObjectID = "DSk-Ul-7bE"; */
-"DSk-Ul-7bE.title" = "密码助手";
+"DSk-Ul-7bE.title" = "密码小助手";
 
 /* Class = "UISegmentedControl"; E3k-mV-EqU.segmentTitles[0] = "All"; ObjectID = "E3k-mV-EqU"; */
 "E3k-mV-EqU.segmentTitles[0]" = "全部";
